# btmnr

./: .gitignore  Cargo.toml  README.md  config.json  installer.nsi
.github/workflows/: build.yml
src/: Cargo.toml  audio.rs  bluetooth.rs  config.rs  main.rs
